# ping-pong-tron-legacy

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.zig  build_wasm.sh  cbuild.c  cbuild.h  cbuild_wasm.c  compile_by_zig_cc.txt  configure.sh  configure_release.sh  remove_all_cmake_build_folders.sh  run.sh  run_export_image_to_c_header_file.sh  run_test.sh  run_zig_cc.sh
src/: ball.c  ball.h  config.h  data_types.h  export_image_to_c_header_file.c  game.c  game.h  main.c  main_test.c  player.c  player.h  scoreboard.c  scoreboard.h  table.c  table.h  utils.c  utils.h
